binary search added

--- a/public/index.html
+++ b/public/index.html
@@ -10,16 +10,22 @@
 <body>
     <div class="navbar navbar-light bg-light">
         <h1>Algorithm Playground</h1>
-        <div class="btn btn-primary" id="home">Home</div>
-        <div class="btn btn-warning" id="clear">Clear Results</div>
+        <div class="button-toolbar">
+            <div class="btn-group mr-2" role="group">
+                <button type="button" class="btn btn-primary btn-sm" id="home">Home</button>
+            </div>
+            <div class="btn-group" role="group" aria-label="Third group">
+                <button type="button" class="btn btn-warning btn-sm" id="clear">Clear Results</button>
+            </div>
+        </div>
     </div>
     <div class="container main">
-        <h4>A place to test some algorithms!</h4>
+        <h4 id="section_header">A place to test some algorithms!</h4>
         <div class="card" id="home_planet">
             <form>
                 <div class="form-group">
                     <label for="select_algorithm">Which algorithm do you want to test?</label>
-                    <select class ="form-control" name="select_algorithm" id="select_algorithm">
+                    <select class="form-control" name="select_algorithm" id="select_algorithm">
                         <option value="reverse_string">reverse a string</option>
                         <option value="floyd_triangle">show a floyd triangle</option>
                         <option value="three_largest">find three largest numbers</option>
@@ -29,11 +35,10 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <button class="btn btn-primary btn-sm" id="select_algorithm_button">Go</button>
+                    <button class="btn btn-secondary" id="select_algorithm_button">Go</button>
                 </div>
             </form>
         </div>
-        
     </div>
     <div class="container">
         <div class="card" id="result_planet">
