--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Algo Playpen</title>
 </head>
 <body>
     <div class="navbar navbar-light bg-light">
-        <h1>Algorithm Playground</h1>
+        <h1>Algorithm Playpen</h1>
         <div class="button-toolbar">
             <div class="btn-group mr-2" role="group">
                 <button type="button" class="btn btn-primary btn-sm" id="home">Home</button>
@@ -41,10 +41,21 @@
         </div>
     </div>
     <div class="container">
-        <div class="card" id="result_planet">
-            <!-- results here from js -->
+        <div class="row results_row">
+            <div class="col-md-6">
+                <div class="card" id="result_planet">
+                    <!-- results here from js -->
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card" id="code_planet">
+                    <!-- results here from js -->
+                </div>
+            </div>
         </div>
+        
     </div>
+<script src="./script_helpers/big_objs.js"></script>
 <script src="./script.js"></script>
 </body>
 </html>
